src/objects/AMS_2_GDP_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Activate_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Classes__c</fullName>
        <label>Location Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Email__c</fullName>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Schedule_Period__c</fullName>
        <label>Schedule Period (hr)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AMS 2 GDP Settings</label>
</CustomObject>